feat: may now pass local files as mappings